# langgraph-agent

./: .gitignore  LICENSE  LLM_CONFIG.yaml  README.md  main.py  main_lang_srever.py  pyproject.toml
.claude/commands/: excalidraw.md
01_langchain_basics/: 01_llms_and_lcel.ipynb  02_prompts_output_parsers.ipynb  03_project_smart_qa_bot.ipynb  diagram.excalidraw
02_rag_chat_memory/: 01_chat_memory.ipynb  02_rag_research_assistant.ipynb  diagram.excalidraw
03_langgraph_basics/: 01_state_and_graphs.ipynb  02_routing_and_loops.ipynb  03_checkpointing_and_hitl.ipynb  diagram.excalidraw
04_multi_agent/: 01_tool_calling_and_handoffs.ipynb  02_supervisor_and_parallel.ipynb  03_communication_and_hierarchy.ipynb  04_research_system_project.ipynb  diagram.excalidraw
05_deploying_agents/: 01_reliability_and_monitoring.ipynb  02_security_and_testing.ipynb  03_production_api_reference.ipynb  diagram.excalidraw
frontend/: api.py  app.py
omniassistant/: graph.py  langgraph.json  state.py
omniassistant/agents/ChatAgent/: consts.py  graph.py
omniassistant/chains/: llm_inference_chain.py  llm_provider.py
omniassistant/chains/tests/: test_chains.py
omniassistant/nodes/: __init__.py  llm_inference.py
