[project]
name = "omni-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "langchain>=1.1.2",
    "langchain-anthropic>=1.2.0",
    "langchain-openai>=1.1.0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.0",
    "streamlit>=1.52.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.7",
]
